API: generalização da rota "doubts" para "email", inclusão da rota de conversão de moeda. WEBSITES: Melhorias no módulo angular, refatoração do body controller e ajustes nos apps para comunicar com as novas rotas
