# .net/api/swagger/swagger_output.json
@@ -5,7 +5,7 @@
     "title": "REST API",
     "description": ""
   },
-  "host": "localhost:3000",
+  "host": "localhost:3100",
   "basePath": "/",
   "schemes": [
     "http"
@@ -101,7 +101,7 @@
         }
       }
     },
-    "/doubts": {
+    "/email": {
       "post": {
         "description": "",
         "parameters": [
@@ -114,13 +114,7 @@
                 "WebSite": {
                   "example": "any"
                 },
-                "SenderName": {
-                  "example": "any"
-                },
-                "SenderEMail": {
-                  "example": "any"
-                },
-                "Description": {
+                "MailType": {
                   "example": "any"
                 }
               }
@@ -141,7 +135,7 @@
       }
     },
     "/exchange/rates/{baseCurrency}": {
-      "post": {
+      "get": {
         "description": "",
         "parameters": [
           {
@@ -149,6 +143,42 @@
             "in": "path",
             "required": true,
             "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/exchange/convert/": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "FromCurrency": {
+                  "example": "any"
+                },
+                "FromValue": {
+                  "example": "any"
+                },
+                "ToCurrency": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
